@@ -1,3 +1,4 @@
+* change of SMaterial.density to a unit of kg/m3
 * deprecate the fit_xrr function, which will be remove in the next major
   version -> use the new FitModel
 * new FitModel class for fitting of instances of LayerModel
